Bug: added z-index to nav

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -18,6 +18,11 @@
 	height: auto;
 }
 
+.nav-wrapper {
+	width: 100%;
+    z-index: 5;	
+}
+
 /* NAVIGATION */
 .navbar {
 	display: grid;
